[package]
name = "persistent-tcp"
version = "0.1.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2021"

description = "TCP stream that tries to reconnect when disconnected"
documentation = "https://docs.rs/persistent-tcp"
homepage = "https://github.com/agerasev/persistent-tcp"
repository = "https://github.com/agerasev/persistent-tcp.git"
readme = "README.md"
keywords = ["async", "tcp", "persistent", "reconnect"]
categories = ["asynchronous", "network-programming"]
license = "MIT/Apache-2.0"

[features]
default = ["tokio", "test"]
test = ["tokio/io-util", "env_logger"]

[dependencies]
log = "0.4.17"
env_logger = { version = "0.10.0", optional = true }

[dependencies.futures]
version = "0.3.25"
default-features = false
features = ["std", "async-await"]

[dependencies.async-std]
version = "1.12.0"
optional = true

[dependencies.tokio]
version = "1.23.0"
optional = true
default-features = false
features = ["net", "rt", "time", "macros"]
